major work on lecture 3-3 as well as 3-1 and 3-2

--- a/lectures/iter3/02_projectplan.md.erb
+++ b/lectures/iter3/02_projectplan.md.erb
@@ -27,7 +27,7 @@ title: Project Planning
 1. Database up and running (focus on core views)
 1. User accounts: registration, login, logout, administration
 1. Work out your URL scheme and build the routes
-1. Build up some seed/test data so you can see something
+1. Build up some interesting demonstration data to show off your product.
 1. Write tests
 1. Use ActiveAdmin to quickly get an admnin UI to all your data
 1. Bootstrap for your UI framework (recommended)
