--- a/lectures/iter3/03_html_css.md.erb
+++ b/lectures/iter3/03_html_css.md.erb
@@ -1,4 +1,29 @@
 ---
-title: HTML and CSS
+title: HTML, CSS and friends
+css_class: bold
 ---
 <%= homework_hdr %>
+* Read [Rails Guide on Form Helpers](http://guides.rubyonrails.org/form_helpers.html) with a metaphorical pen and paper in hand. Take notes, especially about points you did not understand or could not get to work. <%= deliverable "Piazza post with your notes." %>
+* Create a very simple Rails application which shows off a handmade (not scaffolded) form. Refer to <%= link_to_topic :hw_railsform %>. <%= deliverable "push the app to github, supply the github url and a very short screencast demoing the operation of the form, in a piazza post." %> 
+
+
+#### Text Based formats / languages
+* There are many
+  * XML - granddaddy of them all
+  * HTML (HAML, Markdown)
+  * JSON (YAML)
+  * CSS (SASS, SCSS, LESS)
+  * ERB
+
+* They are all like little programming languages
+  * Syntax checking and syntax errors
+  * Versions (HTML5, )
+  * Given to 'interpreter' or 'compiler' to do something
+
+#### Lightning Reviews
+* <%= link_to_topic :xml %>
+* <%= link_to_topic :html %>
+* <%= link_to_topic :css %>
+* <%= link_to_topic :json %>
+* <%= link_to_topic :erb %>
+
