--- a/lectures/iter3/04_ui_ux_design.md.erb
+++ b/lectures/iter3/04_ui_ux_design.md.erb
@@ -2,3 +2,15 @@
 title: UI, UX and Design
 ---
 <%= homework_hdr %>
+1. Read [Effective Use of white space in forms](http://www.nngroup.com/articles/form-design-white-space).
+1. Read [A Summary of User Interface Design Principles](http://www.google.com/url?q=http%3A%2F%2Fwww.sylvantech.com%2F~talin%2Fprojects%2Fui_design.html&sa=D&sntz=1&usg=AFrqEzfZLk-zyoMy1xkfGscZSCkj4jmQwg) and [Principles of User Interface Design](http://www.google.com/url?q=http%3A%2F%2Fbokardo.com%2Fprinciples-of-user-interface-design%2F&sa=D&sntz=1&usg=AFrqEzdSLWzK-QmM1_v0_4qSOX5haifrEg). Note: you may add your favorite other article about UI and UX design. <%= deliverable "A blog post about one of the principles from these or your readings and how it applies to your product. Prepare for a classroom discussion" %>
+1. Check out [Five Second Test](http://fivesecondtest.com) and choose an aspect of your product to test using this site. *Prepare to explain it in class!*
+
+<%= include_topic :ux_basics %>
+
+<%= include_topic :ux_review_exercise %>
+
+#### Conclusion
+* I want you to always refer back to principles such as these when you design or present a user experience. 
+* It's very easy to say, "Oh it's common sense." But you submit designs that violate these principles left and right.
+* It's important. Make it part of your toolkit. Internalize it! Take care!
