--- a/lab/future/08_sprint2.md.erb
+++ b/lab/future/08_sprint2.md.erb
@@ -2,3 +2,13 @@
 title: Sprint 2
 css_class: bold
 ---
+* <%= team_deliverable "Prepare a demo of what you have working so far." %>
+* BEFORE LAB, write a post with team status.. At least one sentence per member with what they completed this week, what they plan to complete in the coming week, and if there are any obstacles.
+* <%= team_deliverable "Weekly status update post." %>
+
+#### Project Work
+* All teams use the full two hours (minus 30 minutes) to code on their projects.
+* Pito and Amin are available for consultation. Bring questions or areas where you want to consult.
+
+##### Demos
+* Each team takes 5 minutes to summarize progress to date, what the plan is for the coming week, and demonstrate their product so far.
