--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -32,3 +32,4 @@ type: page
 * [Sandy Metz on Object Oriented Design](http://www.confreaks.com/videos/240-goruco2009-solid-object-oriented-design)
 * [UX Crash Course: 31 Fundamentals](http://thehipperelement.com/post/75476711614/ux-crash-course-31-fundamentals)
 * [Ruby Gotchas](http://blog.elpassion.com/ruby-gotchas/?utm_source=rubyweekly&utm_medium=email)
+* [Debugging Rails Applications](http://nofail.de/2013/10/debugging-rails-applications-in-development/)
