updated lecture 3-4 and 3-6

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -33,3 +33,4 @@ type: page
 * [UX Crash Course: 31 Fundamentals](http://thehipperelement.com/post/75476711614/ux-crash-course-31-fundamentals)
 * [Ruby Gotchas](http://blog.elpassion.com/ruby-gotchas/?utm_source=rubyweekly&utm_medium=email)
 * [Debugging Rails Applications](http://nofail.de/2013/10/debugging-rails-applications-in-development/)
+* [Clean Up Your Visual Mess](http://www.visualmess.com)
