--- a/lectures/iter3/06_more_views.md.erb
+++ b/lectures/iter3/06_more_views.md.erb
@@ -1,5 +1,8 @@
 ---
 title: Forms and Views
-css_class: bold
 ---
+<%= homework_hdr %>
+
+* Read [Clean Up Your Visual Mess](http://www.visualmess.com)
+
 #### Coming Soon!
