--- a/lab/future/11_sprint5.md.erb
+++ b/lab/future/11_sprint5.md.erb
@@ -1,4 +1,19 @@
 ---
-title: Sprint 5
+title: Sprint 5 - PR meetings
 ---
-#### Product Reviewers Meetings
+<%= homework_hdr %>
+
+* Format of Product Reviewer Meeting
+  * 1 hour private meeting with the reviewer
+  * Products should be ready for a nice demo by now!
+  * Update your dossiers as appropriate
+* Give PR an update of progress so far
+  * What has been completed
+  * Be able to describe the intended final demo fairly cleraly
+  * Describe experiences so far: dead ends, what's worked well, what has not
+  * Describe design or architecture decisions that have been made
+* Discussion
+  * Recall the specific advice you got last time and describe your response
+  * Desceibe a few specific technical, product or team challenges
+  * Make sure you collect the PRs suggestions for this round of discussions
+  
