--- a/lectures/iter3/06_REST_web_services.md.erb
+++ b/lectures/iter3/06_REST_web_services.md.erb
@@ -2,8 +2,13 @@
 title: Web Services and REST
 ---
 <%= homework_hdr %>
-* Read [RESTful Web Services](http://www.ibm.com/developerworks/webservices/library/ws-restful/)
-* Read [Chapter 5 of Roy Fielding's Dissertation](http://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm#sec_5_1)
+* Read:
+  * [RESTful Web Services](http://www.ibm.com/developerworks/webservices/library/ws-restful/)
+  * [Chapter 5 of Roy Fielding's Dissertation](http://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm#sec_5_1)
+* <%= deliverable "Write a blog post contianing your reflection on this" %>
+  * Roy Fielding's dissertation has been quite influential in the way systems are built.
+  * The term REST has really caught on but more than that, he identified an architectural pattern and was able to articulate where it fits into a broad architectural scheme.
+  * Reflect on how academic research and dissertations like this one can affect and be affected by the engineering work done at places like Google and Apple. 
 
 #### What is a web service?
 
