update lectures 3-6 and 3-6

--- a/lectures/iter3/06_forms_and_views.md.erb
+++ b/lectures/iter3/06_forms_and_views.md.erb
@@ -5,4 +5,9 @@ css_class: bold
 <%= homework_hdr %>
 * Continue work on your search form example from a few days ago, by implementing all of Part 2 of <%= link_to_topic :hw_railsform %>. <%= deliverable "push the app to github, supply the github url and a very short screencast demoing the operation of the form, in a piazza post." %>
 
-#### Coming Soon!
+#### Four Case Studies
+* Reference containing all the code: [FormDemo](https://github.com/pitosalas/formdemo)
+1. Basic form without scaffolding
+1. Form with additional widgets using various xxx_tag helpers
+1. Form to work with a nested resource
+1. Two level form that edits info from two different models
