extend homework deadline

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -34,3 +34,4 @@ type: page
 * [Ruby Gotchas](http://blog.elpassion.com/ruby-gotchas/?utm_source=rubyweekly&utm_medium=email)
 * [Debugging Rails Applications](http://nofail.de/2013/10/debugging-rails-applications-in-development/)
 * [Clean Up Your Visual Mess](http://www.visualmess.com)
+* [Seven Guidelines for designing high performance mobile experiences](http://uxdesign.smashingmagazine.com/2011/07/18/seven-guidelines-for-designing-high-performance-mobile-user-experiences/)
