update lecture 4-1 and 4-6

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -35,3 +35,4 @@ type: page
 * [Debugging Rails Applications](http://nofail.de/2013/10/debugging-rails-applications-in-development/)
 * [Clean Up Your Visual Mess](http://www.visualmess.com)
 * [Seven Guidelines for designing high performance mobile experiences](http://uxdesign.smashingmagazine.com/2011/07/18/seven-guidelines-for-designing-high-performance-mobile-user-experiences/)
+* [What is Academic Engrepreneurship?](http://sciencecareers.sciencemag.org/career_magazine/previous_issues/articles/2014_03_20/caredit.a1400073)
