--- a/lectures/iter4/01_ajax.md.erb
+++ b/lectures/iter4/01_ajax.md.erb
@@ -2,7 +2,7 @@
 title: Responsive UX and Ajax
 ---
 <%= homework_hdr %>
-* 
+* Write a simple Ruby program that demonstrates the 
 
 #### Definitions
 * Ajax:
