--- a/lab/future/09_sprint3.md.erb
+++ b/lab/future/09_sprint3.md.erb
@@ -1,3 +1,23 @@
 ---
 title: Sprint 3
+css_class: bold
 ---
+<%= homework_hdr %>
+* <%= team_deliverable "Prepare a demo of what you have working so far." %>
+* BEFORE LAB, write a post with team status:
+  * Three sections: Accomplishments Last Week, Commitments for Coming Week, Obstacles
+  * Each section, one or two sentences for each team member
+  * Posted to Piazza: One Post.
+* <%= team_deliverable "Weekly status update post." %>
+
+#### Project Work
+* Note about handing in deliverables:
+  * On time - Yes, the day of class by class time. Not a suggestion. If you need an extension please say so.
+  * Complete - I take time to write it precisely, please try to follow along
+  * Ready to be reviewed - Yes we actually read and try it all. Sometimes would like to see more pride in the quality of work delivered.
+
+* All teams use the full two hours (minus 30 minutes) to code on their projects.
+* Pito and Amin are available for consultation. Bring questions or areas where you want to consult.
+
+##### Demos
+* Each team takes 5 minutes to summarize progress to date, what the plan is for the coming week, and demonstrate their product so far.
