--- a/lab/future/13_sprint7.md.erb
+++ b/lab/future/13_sprint7.md.erb
@@ -1,3 +1,14 @@
 ---
-title: Sprint 7
+title: Sprint 7 -- Final Prep for Final "exam"
 ---
+#### Final Demos ###
+* By now, you should be able to demonstrate your product!
+* Yes there may be bugs and uglyness which you will have a week to fix
+* We will spend an hour doing demo dry runs
+
+#### Outline for Product Showcase
+* There will be 6 Product Reviewers
+* Each team will have 15 minutes, 10 for presentation, 5 for questions
+
+#### Suggested Presentation
+* Coming Soon
