update homework for lecture 4-1

--- a/lectures/iter4/01_web_services_rest.md.erb
+++ b/lectures/iter4/01_web_services_rest.md.erb
@@ -1,25 +1,21 @@
 ---
-title: Web Services and Rest
+title: Web Services APIs
 css_class: bold
 ---
 <%= homework_hdr %>
 * Download this [WebService Demo](https://github.com/pitosalas/webservicedemo) to your computer
-* Download and install a REST Client app. I suggest Advanced REST Client for Chrome
-* Let's think about wine!
-	* Look at the API for wine.com (https://api.wine.com)
-	* Get yourself an API key for that api
-	* Look through the API documentation for the Wine.com API
-* Let's think about the government
-	* Look at the API fr the Sunlight FOundaton (http://sunlightfoundation.com/api/)
-	* Get yourself an API key for that one
-	* Look through the documentation
-* Be creative and describe a cool program you could write using one or both of these apis.
-	* A simple idea: A list of all Wines that have a name with more than n words.
-	* Another one: A list of wines with the word Kosher in the name
-	* Another one: Look up a wine, find out where it is made, and display today's high and low termperature in that area
-	* Ok so those ideas are all kind of dumb...
-<%= deliverable "A blog post with an idea or two of an interesting / funny / useful app you could write using one of these APIs" %>
-
-
+* Download and install a REST Client app. For example [rest-client](https://code.google.com/p/rest-client/) or [Chrome Advanced Rest Client](https://chrome.google.com/webstore/detail/advanced-rest-client/)
+* Familiarize yourself with one or two real Web Services (also called Web APIs or APIs). Here are some interesting starting points:
+	* Everything known about wine: [Wine.com API](https://api.wine.com)
+	* Open Government Data: [Sunlight Foundation API](http://sunlightfoundation.com/api/)
+	* APIs of cooking recipes: [Yummly](https://developer.yummly.com)
+	* [Reddit API](https://github.com/reddit/reddit/wiki/API)
+	* [US Census Bureau](http://www.census.gov/developers/)
+	* [Weather Information](http://www.wunderground.com/weather/api/)
+	* A huge directory of all kinds of web services: [Programmable Web](http://www.programmableweb.com)
+* Most web services (APIs) need an API-key of some kind (free). Get one
+* Experiment with the REST client and one of the Web services described above
+* Using the REST client app above: try some calls and get them to work
+* <%= deliverable "A blog post describing your experience. What api you tried and what you learned. And describing one specific way in which your product could use a Web Service API" %>
 
 <%= include_topic :rest_web_services%>
