small change to lab 10

--- a/lab/future/10_sprint4.md.erb
+++ b/lab/future/10_sprint4.md.erb
@@ -1,3 +1,18 @@
 ---
 title: Sprint 4
+css_class: bold
 ---
+<%= homework_hdr %>
+* <%= team_deliverable "Prepare a demo of what you have working so far." %>
+* BEFORE LAB, write a post with team status:
+  * Three sections: Accomplishments Last Week, Commitments for Coming Week, Obstacles
+  * Each section, one or two sentences for each team member
+  * Posted to Piazza: One Post.
+* <%= team_deliverable "Weekly status update post." %>
+
+#### Project Work
+* All teams use the full two hours (minus 30 minutes) to code on their projects.
+* Pito and Amin are available for consultation. Bring questions or areas where you want to consult.
+
+##### Demos
+* Each team takes 5 minutes to summarize progress to date, what the plan is for the coming week, and demonstrate their product so far.
