update lecture 4-2 and lab 10

--- a/lab/future/10_sprint4.md.erb
+++ b/lab/future/10_sprint4.md.erb
@@ -3,12 +3,18 @@ title: Sprint 4
 css_class: bold
 ---
 <%= homework_hdr %>
-* <%= team_deliverable "Prepare a demo of what you have working so far." %>
+* <%= team_deliverable %>
 * BEFORE LAB, write a post with team status:
   * Three sections: Accomplishments Last Week, Commitments for Coming Week, Obstacles
   * Each section, one or two sentences for each team member
   * Posted to Piazza: One Post.
-* <%= team_deliverable "Weekly status update post." %>
+* <%= team_deliverable "Prepare a demo of what you have working so far and submit your weekly status update to Piazza." %>
+
+### Post-it note feedback
+* Scale 1-10: 1: Strongly Disagree, 10: Strongly Agree
+	* I've learned a lot that I will be able to use
+	* I would recommend this course to my fellow students
+* Other suggestions (that could improve the remaining weeks of this course for you.)
 
 #### Project Work
 * All teams use the full two hours (minus 30 minutes) to code on their projects.
