--- a/lectures/iter4/02_ajax_js.md.erb
+++ b/lectures/iter4/02_ajax_js.md.erb
@@ -7,7 +7,7 @@ title: AJAX
 
   What latent interests have been reinforced? What did you discover you were not so interested in? What have you learned about the work you want to do in the future? BGased on your interests and your strenghts? Do you have more clarity there? Where do you know you want to learn a lot more? 
 
-  You may either post to piazza or if you want an email to Pito and Amin if it allows you to be more open. <%= deliverable "Two to three paragraph personal reflection" %>
+  You may either post to piazza or if you want an email to Pito and Amin if it allows you to be more open. <%= deliverable "Two to Four paragraph personal reflection" %>
 
 #### Background
 * Ajax:
@@ -37,3 +37,6 @@ title: AJAX
 
 #### Browser
 * Document Object Mode
+
+#### References
+* [Javascript Coding Conventions](http://javascript.crockford.com/code.html)
