--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -36,3 +36,4 @@ type: page
 * [Clean Up Your Visual Mess](http://www.visualmess.com)
 * [Seven Guidelines for designing high performance mobile experiences](http://uxdesign.smashingmagazine.com/2011/07/18/seven-guidelines-for-designing-high-performance-mobile-user-experiences/)
 * [What is Academic Engrepreneurship?](http://sciencecareers.sciencemag.org/career_magazine/previous_issues/articles/2014_03_20/caredit.a1400073)
+* [Rails Timezone Tutorial](http://apprentice.craic.com/tutorials/48)
