--- a/lectures/iter4/02_ajax_js.md.erb
+++ b/lectures/iter4/02_ajax_js.md.erb
@@ -1,5 +1,6 @@
 ---
-title: AJAX
+title: AJAX and friends
+css_class: bold
 ---
 <%= homework_hdr %>
 * What are a few ways to use Ajax in your product? While there are some obious ones, see if you can come up with one or two imaginative, innovative, and yet not crazy impossible applications of Ajax. <%= deliverable "Piazza post with your proposals." %>
