last few lectures

--- a/lab/future/11_sprint5.md.erb
+++ b/lab/future/11_sprint5.md.erb
@@ -1,19 +1,24 @@
 ---
 title: Sprint 5 - PR meetings
+css_class: bold
 ---
-<%= homework_hdr %>
+#### Homework: 100% Focus on impressing the PRs!!!
+* Same 5 Product Reviewers
 
-* Format of Product Reviewer Meeting
-  * 1 hour private meeting with the reviewer
-  * Products should be ready for a nice demo by now!
-  * Update your dossiers as appropriate
-* Give PR an update of progress so far
-  * What has been completed
-  * Be able to describe the intended final demo fairly cleraly
+##### Initial 45 minutes: All teams present in turn to all PRs
+* Presenting to panel of 5 reviewers plus class (in classroom)
+* Each product should take 6 minutes (Amin will time)
+  * 2 minutes explaining progress to date
+  * 5 Minutes demoing the product
+  * Make sure you practice ahead of time so stuff runs
+
+##### Next 60 minutes: each team meets privately with PR
+  * Review his feedback about your demo
+  * Review with him your specific feature set commitment for the final Showcase
+  * Get his help with meeting high expectations
+  * Update your dossiers if appropriate
   * Describe experiences so far: dead ends, what's worked well, what has not
   * Describe design or architecture decisions that have been made
-* Discussion
   * Recall the specific advice you got last time and describe your response
-  * Desceibe a few specific technical, product or team challenges
+  * Describe a few specific technical, product or team challenges
   * Make sure you collect the PRs suggestions for this round of discussions
-  
