--- a/lectures/iter4/03_advanced_arch.md.erb
+++ b/lectures/iter4/03_advanced_arch.md.erb
@@ -1,12 +1,13 @@
 ---
 title: Architectural Topics
 ---
-<%= homework_hdr %>
-* Read this article: [Microservices](http://martinfowler.com/articles/microservices.html)
+#### Homework: 100% Focus on impressing the PRs on Thursday!!
+* Invest the time you have for homework fully on getting your product ready for Thursday. There's still time to make a lot of progress! No specific deliverable!
 
 #### Caching
 
 #### Background Processing
 
 #### Service Oriented Architectures
-* Microservices
+* Microservices. See: [Microservices](http://martinfowler.com/articles/microservices.html)
+
