--- a/lectures/iter4/04_se_at_scale.md.erb
+++ b/lectures/iter4/04_se_at_scale.md.erb
@@ -3,14 +3,15 @@ title: Software Engineering at Scale
 type: page
 ---
 <%= homework_hdr %>
-* Deploy your product to Heroku
-* Enable your product for continuous deployment
-<%= team_deliverable "links to demonstrate that you've succeeded in those tasks!" %>
+
+* Deploy your product to Heroku. You will have to review the [Heroku](heroku.com) web site to find instructions on how to get a product to be deployed onto Heroku. Some of you have already done it, that's great. For the others it might be a good idea to get one of your team members to work out how to do it while the other (1,2 or 3) continue working on the product.
+* Add a CodeClimate Badge to your Readme page in Github. Easy.
+* Enable your product for continuous deployment on Codeship.io. I suggest your putting one of your team members alone on readingup on Codeship and getting it to work while the others keep working on the product.
+<%= team_deliverable "3 links to demonstrate that you've succeeded in those tasks!" %>
 
 #### Continuous Integration and Deployment
 
 #### Cloud Services
-* Heroku and friends
 
 #### Feature Switches
 
