--- a/lectures/iter4/02_ajax_js.md.erb
+++ b/lectures/iter4/02_ajax_js.md.erb
@@ -27,32 +27,41 @@ css_class: bold
 * **Asynchronous update**: page changes without the user doing anything
 * **Typeahead**: suggested completions added to a textbox while typing
 * **Delayed Rendering**: Result from a query comes in gradually
-* **In Place Editing** Forms that allow in place editing (instead of a big submit button)
+* **In Place Editing**: Forms that allow in place editing (instead of a big submit button)
+* **Server Push**: Browser update initiated by the server!
 
 ##### How Ajax works
 * Steps
-  1. browser makes a 'background' http request 
-  1. server (i.e. the controller) returns 'data'
-  1. browser based code (javascript) interprets that data
-  1. browser to change what is displayed in the current page
+  1. Browser makes a 'background' http request 
+  1. Server (i.e. the controller) returns 'data'
+  1. Browser based code (javascript) interprets that data
+  1. Browser changes DOM which changes what is displayed in the current page
 
 #### Deeper dive
 
-##### Browser
+##### <%= bold_red "Javascript is a serious and very important langauge" %>
+
+* It might be the most important language right now
+  * Why?
+  * Has nothing to do with Java!
+  * Name is strictly political (back in the 80's I think)
+* Browser DOM :: HTML :: CSS :: JavaScript are interlocking partners that work together
 * Document Object Model
-* DOM is a strictly a tree with the <html></html> at the top of the tree.
-  * Each tree element is a node
-  * The top of the tree, the root node, is <html></html>, is assigned to the variable *document*
-  * Every node has exactly one parent
-* The DOM tree can be modified AT RUN TIME
+  * DOM is a strictly a tree with the <html></html> at the top of the tree, assigned to variable `document`.
+  * Each tree element is a node. Every node has exactly one parent
+  * The DOM tree can be modified AT RUN TIME
   * Any change to the DOM tree is immediately reflected in the visual appearance of the page!
 
-##### Javacript
-* Has nothing to do with Java!
-* Name is strictly political (back in the 80's I think)
-* Browser :: HTML :: CSS :: JavaScript are interlocking partners that work together
+`Let's look at some code:` Github: [Ajax Demo](https://github.com/pitosalas/ajaxdemo)
 
-#### Server Push
+##### Ajax basics in Rails
+* Unobtrusive Javascript
+* Uses JQuery
+* Ties js to erbs and the views
+
+`Let's look at some code:` Github: [Form Demo](https://github.com/pitosalas/formdemo)
+
+##### Server Push
 * Not a real term :)
 * Many different ways of approaching. Sort of immature right now
 * Key techniques are:
@@ -62,10 +71,8 @@ css_class: bold
   * [Pusher Service - free push](http://pusher.com)
   * [Websockets on Heroku](https://devcenter.heroku.com/articles/ruby-websockets)
 
-##### Tour of JavaScript examples
-* demo1
-* demo2
-* demo3
+`Let's look at some code:` Github: [Form Demo](https://github.com/pitosalas/formdemo)
+
 
 #### References
 * [Javascript Coding Conventions](http://javascript.crockford.com/code.html)
