major update to 4-3 and 4-4

--- a/lectures/iter4/03_advanced_arch.md.erb
+++ b/lectures/iter4/03_advanced_arch.md.erb
@@ -1,13 +1,8 @@
 ---
-title: Architectural Topics
+title: Large Scale Archictural Topics
+css_class: bold
 ---
 #### Homework: 100% Focus on impressing the PRs on Thursday!!
 * Invest the time you have for homework fully on getting your product ready for Thursday. There's still time to make a lot of progress! No specific deliverable!
 
-#### Caching
-
-#### Background Processing
-
-#### Service Oriented Architectures
-* Microservices. See: [Microservices](http://martinfowler.com/articles/microservices.html)
-
+<%= include_topic :scaling %>
