--- a/lectures/iter4/04_se_at_scale.md.erb
+++ b/lectures/iter4/04_se_at_scale.md.erb
@@ -1,5 +1,6 @@
 ---
 title: Software Engineering at Scale
+css_class: bold
 ---
 <%= homework_hdr %>
 
@@ -7,6 +8,10 @@ title: Software Engineering at Scale
 * Add a CodeClimate Badge to your Readme page in Github. Easy.
 * Enable your product for continuous deployment on Codeship.io. I suggest your putting one of your team members alone on readingup on Codeship and getting it to work while the others keep working on the product.
 <%= team_deliverable "3 links to demonstrate that you've succeeded in those tasks!" %>
+
+#### Continuing about scaling
+* Continue at "Techniques: Asycnhronous processing"
+* Topic: <%= link_to_topic :scaling %>
 
 #### Continuous Integration and Deployment
 
