--- a/lectures/iter4/03_advanced_arch.md.erb
+++ b/lectures/iter4/03_advanced_arch.md.erb
@@ -1,8 +1,10 @@
 ---
 title: Large Scale Archictural Topics
-css_class: bold
 ---
 #### Homework: 100% Focus on impressing the PRs on Thursday!!
 * Invest the time you have for homework fully on getting your product ready for Thursday. There's still time to make a lot of progress! No specific deliverable!
+
+#### Problems at launch of healthcare.gov
+<iframe width="560" height="315" src="//www.youtube.com/embed/Rl5WFz6Gi28" frameborder="0" allowfullscreen></iframe>
 
 <%= include_topic :scaling %>
