--- a/lectures/iter4/03_advanced_arch.md.erb
+++ b/lectures/iter4/03_advanced_arch.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Large Scale Archictural Topics
+title: Large Scale Architecture
 ---
 #### Homework: 100% Focus on impressing the PRs on Thursday!!
 * Invest the time you have for homework fully on getting your product ready for Thursday. There's still time to make a lot of progress! No specific deliverable!
