small changes to lectures

--- a/lectures/iter4/05_review_topics.md.erb
+++ b/lectures/iter4/05_review_topics.md.erb
@@ -1,14 +1,17 @@
 ---
 title: Review Topics
+css_class: bold
 ---
 <%= homework_hdr %>
+#### Homework: 100% Focus on product work!!
+* Invest all your homework time on product work. No specific deliverables!
 
-
-#### Sessions
+#### Review Topics
+##### Sessions
 * Cookies
 * Session Storage types
 
-#### More about testing
+##### More about testing
 * Fixtures
 * Test Doubles
 	* Mocks
@@ -16,5 +19,5 @@ title: Review Topics
 * Capybara
 * BDD
 
-#### Regular Expressions
+##### Regular Expressions
 * Rubular
