update lecture 4-4 and 4-5

--- a/lectures/iter4/05_review_topics.md.erb
+++ b/lectures/iter4/05_review_topics.md.erb
@@ -2,22 +2,17 @@
 title: Review Topics
 css_class: bold
 ---
-<%= homework_hdr %>
 #### Homework: 100% Focus on product work!!
 * Invest all your homework time on product work. No specific deliverables!
 
-#### Review Topics
-##### Sessions
-* Cookies
-* Session Storage types
+#### Regular Expressions
+<%= include_topic :regexp %>
 
-##### More about testing
-* Fixtures
-* Test Doubles
-	* Mocks
-	* Stubs
-* Capybara
-* BDD
+#### Sessions
+<%= include_topic :sessions %>
 
-##### Regular Expressions
-* Rubular
+#### More about testing
+
+<%= include_topic :mocking %>
+<%= include_topic :capybara %>
+
