--- a/lab/future/12_sprint6.md.erb
+++ b/lab/future/12_sprint6.md.erb
@@ -1,3 +1,16 @@
 ---
 title: Sprint 6
 ---
+<%= homework_hdr %>
+* BEFORE LAB, write a post with team status:
+  * Three sections: Accomplishments Last Week, Commitments for Coming Week, Obstacles
+  * Each section, one or two sentences for each team member
+  * Posted to Piazza: One Post.
+* <%= team_deliverable "Prepare a Demo of your best stuff. Post weekly status update post." %>
+
+#### Demos First!!
+* Each team takes 5 minutes to summarize progress to date, what the plan is for the coming week, and demonstrate their product so far. 
+
+#### Project Work
+* All teams use remaining two hours (minus 30 minutes) to code on their projects.
+* Pito and Amin are available for consultation. Bring questions or areas where you want to consult.
