--- a/lab/future/13_sprint7.md.erb
+++ b/lab/future/13_sprint7.md.erb
@@ -1,14 +1,25 @@
 ---
 title: Sprint 7 -- Final Prep for Final "exam"
 ---
-#### Final Demos ###
-* By now, you should be able to demonstrate your product!
-* Yes there may be bugs and uglyness which you will have a week to fix
-* We will spend an hour doing demo dry runs
+#### Final Demo and Presentation prep
+* Demo of the product
+	* By now, you should be able to demonstrate your product!
+	* Yes there may be bugs and uglyness which you will have a week to fix
+	* We will spend an hour doing demo dry runs
+* Presentation
+	* Everyone watch this video that gives fantastic tips on giving a good presentation: [This Week In Startups - Sharktank](http://thisweekinstartups.com/shark-tank-takeover-427/)
+* Handout
+	* You will also need a 1 page, color, "flyer" describing your product and project.
+	* The look and feel should be something like this [JBS Flyer](http://www.brandeis.edu/jbs/upcomingprograms/cosivoice/cosivoiceflyer.pdf)
+	* You will need to print 30 two sided color sheets (for each project)
 
-#### Outline for Product Showcase
+#### Logistics of Product Showcase
+* Date: Tuesday May 6th, from 9:30 to 12:30. 
 * There will be 6 Product Reviewers
 * Each team will have 15 minutes, 10 for presentation, 5 for questions
 
-#### Suggested Presentation
-* Coming Soon
+##### Contents of the Demo
+
+##### Contents of the Presention
+
+##### Contents of the Flyer
