--- a/lectures/iter4/06_top10_se.md.erb
+++ b/lectures/iter4/06_top10_se.md.erb
@@ -1,3 +1,8 @@
 ---
-title: Top 10 List
+title: Vote!
 ---
+#### How Venture Capital Really Works
+
+## or
+
+#### 100 Rules of Thumb from the worlds best Software Engineers
