added a few links

--- a/lectures/iter2/06_controllers.md.erb
+++ b/lectures/iter2/06_controllers.md.erb
@@ -33,6 +33,7 @@ end
 rails generate scaffold Shoes name:string price:float color:string size:integer
 rake db:migrate
 <%= code_end %>
+* Reference: [How I learned to test my Rails Applications, Part 4](http://everydayrails.com/2012/04/07/testing-series-rspec-controllers.html)
 
 ### Controllers and Resources
 
@@ -68,6 +69,7 @@ rake db:migrate
 * What parameters are supplied automatically by the controller action?
 * Sessions, why they are needed and how they work
 * Why does it take two separate actions to implement "create"?
+
 
 #### Demo
 * Lets take a look: <%= link_to_topic :controllers_resources %>
