--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -38,3 +38,8 @@ type: page
 * [What is Academic Engrepreneurship?](http://sciencecareers.sciencemag.org/career_magazine/previous_issues/articles/2014_03_20/caredit.a1400073)
 * [Rails Timezone Tutorial](http://apprentice.craic.com/tutorials/48)
 * [Microservices by Fowler](http://martinfowler.com/articles/microservices.html)
+* [Rails Testing Series Intro](http://everydayrails.com/2012/03/12/testing-series-intro.html)
+* [Rails Testing Series Rspec Setup](http://everydayrails.com/2012/03/12/testing-series-rspec-setup.html)
+* [Rails Testing Series Models and Factory Girl](http://everydayrails.com/2012/03/19/testing-series-rspec-models-factory-girl.html)
+* [Rails Testing Series RSpec and Controllers](http://everydayrails.com/2012/04/07/testing-series-rspec-controllers.html)
+* [Rails Testing Series RSpec and Requests](http://everydayrails.com/2012/04/24/testing-series-rspec-requests.html)
