--- a/lectures/iter4/06_top10_se.md.erb
+++ b/lectures/iter4/06_top10_se.md.erb
@@ -1,8 +1,8 @@
 ---
-title: Vote!
+title: Rules of Thumb
 ---
-#### How Venture Capital Really Works
-
-## or
+#### Homework: 100% Focus on product work!!
+* Invest all your homework time on product work. No specific deliverables!
 
 #### 100 Rules of Thumb from the worlds best Software Engineers
+<%= include_topic :se_rules_of_thumb %>
