--- a/lectures/iter4/06_top10_se.md.erb
+++ b/lectures/iter4/06_top10_se.md.erb
@@ -1,5 +1,6 @@
 ---
 title: Rules of Thumb
+css_class: bold
 ---
 #### Homework: 100% Focus on product work!!
 * Invest all your homework time on product work. No specific deliverables!
