end of semester housecleaning

--- a/lab/future/13_sprint7.md.erb
+++ b/lab/future/13_sprint7.md.erb
@@ -1,25 +1,61 @@
 ---
-title: Sprint 7 -- Final Prep for Final "exam"
+title: Sprint 7 -- Preparation for Showcase
+css_class: bold
 ---
-#### Final Demo and Presentation prep
-* Demo of the product
-	* By now, you should be able to demonstrate your product!
-	* Yes there may be bugs and uglyness which you will have a week to fix
-	* We will spend an hour doing demo dry runs
-* Presentation
-	* Everyone watch this video that gives fantastic tips on giving a good presentation: [This Week In Startups - Sharktank](http://thisweekinstartups.com/shark-tank-takeover-427/)
-* Handout
-	* You will also need a 1 page, color, "flyer" describing your product and project.
-	* The look and feel should be something like this [JBS Flyer](http://www.brandeis.edu/jbs/upcomingprograms/cosivoice/cosivoiceflyer.pdf)
-	* You will need to print 30 two sided color sheets (for each project)
+I hope you all had a good vacation, and that you've been making great progress on your products! I couldn't update the web site tonight so instead I will put important info in this note, the plan for this Thursday, April 24.
+ 
+Don't be scared by how much text is on this page. I am trying to be as detailed and specific as possible. I will answer all your questions about this and refine/revise this on the web site as we get closer to the Showcase. I will also be scheduling 1-1 meetings for each team later this week or early next week to help you get this as good as you can. I want everyone to achieve success! 
 
-#### Logistics of Product Showcase
-* Date: Tuesday May 6th, from 9:30 to 12:30. 
+##### Logistics of Product Showcase
+* Date: Tuesday May 6th, from 9:30 to 12:30.
 * There will be 6 Product Reviewers
 * Each team will have 15 minutes, 10 for presentation, 5 for questions
 
-##### Contents of the Demo
+#### The work due for Thursday's lab is:
+* Prepare for Showcase which is a week from Tuesday: May 6 at 10:00am
+* This is our equivalent of a final exam. Refer to the Grading info on the web site to see the impact.
+* There are three deliverables: a demo, a presentation, and a handout
+* I expect that all of these will be in a 50-60% done state by Thursday
+* See below for tips on each of these deliverables
+* Everyone watch this video that gives fantastic tips on giving a good presentation: [This Week In Startups - Sharktank](http://thisweekinstartups.com/shark-tank-takeover-427/)
+* Each team will do their demos+presentation and we will look at your handouts
+ 
+#### During class, each team will be asked to come to the front and:
+* Do their demo as it stands (5 minutes)
+* Talk through their presentation as it stands (5 minutes)
+* Show their handouts on the screen (no need to print)
 
-##### Contents of the Presention
+The rest of the time will be used to continue to prepare and code on projects
+Pito and Amin are available for consultation. Bring questions or areas where you want to consult
+ 
+#### Details on final deliverables for the course
+Here are the details of what the deliverables should contain (by the showcase)
 
-##### Contents of the Flyer
+##### General:
+* This is not a marketing or selling course.
+* In each of the deliverables, make sure there's a dose of technical info about:
+	* The architecture
+	* The key technologies used
+	* The interesting technical parts of the product
+ 
+##### Demo
+* This is part of the presentation, after one or at most 2 slides
+* Take around 5-7 minutes to demo your product. By now, you should be able to demonstrate your product!
+* Yes there may be bugs and uglyness which you will have a week to fix
+* You do need to work on a demo 'script'
+* The best demo scripts tell a bit of a story where you try to 'hook' the listener with a scenario that they recognize
+ 
+##### Presentation
+* Should be Powerpoint, Google Presentation or whatever you prefer
+* All members of the team will be part of the presentation. Not all students need to talk equal amounts.
+* You should practice it at least once
+* Demo is part of the presentation, but very close to the start
+* Cover what the product does, what's interesting technically, what technologies used, for who does it solve what problem, and any preliminary idea on how it would make money.
+ 
+##### Handout
+* You will also need a 2-sided 1-2 page, color, "flyer" describing your product and project.
+* The look and feel should be something like this [JBS Flyer](http://www.brandeis.edu/jbs/upcomingprograms/cosivoice/cosivoiceflyer.pdf)
+* Each project will need to print 30 copies of their handout
+* It's ok if there is a lot of text, but do include at least one screenshot and also a diagram of the architecture
+* Include names and emails of the team members
+ 
