--- a/lectures/iter5/01_real_world.md.erb
+++ b/lectures/iter5/01_real_world.md.erb
@@ -1,3 +1,5 @@
 ---
 title: Real World Survival Kit
 ---
+#### Homework: 100% Focus on Showcase Prep!!
+* Invest all your homework time on product/Presentations/Demo work. No specific deliverables!
