--- a/lectures/iter5/01_real_world.md.erb
+++ b/lectures/iter5/01_real_world.md.erb
@@ -1,5 +1,10 @@
 ---
 title: Real World Survival Kit
+css_class: bold
 ---
 #### Homework: 100% Focus on Showcase Prep!!
 * Invest all your homework time on product/Presentations/Demo work. No specific deliverables!
+
+#### Livin' In The Real World
+<%= include_topic :real_world %>
+* <%= link_to_topic :real_world_details %>
