change, did I loose anything?

--- a/cribsheets/13_git.md.erb
+++ b/cribsheets/13_git.md.erb
@@ -15,6 +15,7 @@ Here are some features of Git:
 
 There are tons of online resources available for learning git. Below is a list of some that you may find useful:
 
+* [A Hackers Guide to Git](http://wildlyinaccurate.com/a-hackers-guide-to-git)
 * [try.github.com](http://try.github.com/) (beginner)
 * [Git Tutorial](http://www.ralfebert.de/tutorials/git/) (beginner)
 * [Git Ready](http://gitready.com/) (from beginner to advanced)
